<resources>
    <string name="app_name">TaKa - Beladung</string>
    <string name="app_noConnection">Keine Internetverbindung gefunden!</string>
    <string name="app_nodbRefresh">Datenbank bereits auf dem aktuellesten Stand!</string>
    <string name="app_dbRefresh">Eine neue Datenbankversion ist verfügbar!</string>
    <string name="app_license">Diese App steht unter der GNU GPL v3.0. Du findest den Lizenztext unter \"Lizenz\".</string> <!--Schaue sie dir im Menüpunkt "Lizenz" an.-->
    <string name="app_db_update_available">Es ist ein Datenbankupdate verfügbar.</string>
    <string name="app_reset">App zurücksetzen</string>

    <string name="fragment_title_data">Datenbank</string>
    <string name="fragment_title_tray">Gerätefächer</string>
    <string name="fragment_title_item">Ausrüstung</string>
    <string name="fragment_title_detail">Detailansicht</string>
    <string name="fragment_title_debug">Debug</string>
    <string name="fragment_title_settings">Einstellungen</string>
    <string name="fragment_title_about">Über</string>
    <string name="fragment_title_license">Lizenz</string>

    <string name="option_menu_data">Datenbank importieren</string>
    <string name="option_menu_debug">Debug</string>
    <string name="option_menu_settings">Einstellungen</string>
    <string name="option_menu_about">Über</string>
    <string name="option_menu_license">Lizenz</string>
    <string name="action_sort">Sortierung</string>
    <string name="action_group">Aktive Gruppe</string>

    <string name="search_title">Suchergebnisse</string>
    <string name="search_hint">Suche starten...</string>

    <string name="detail_name">Bezeichnung</string>
    <string name="detail_description">Beschreibung</string>
    <string name="detail_setname">Gerätesatz</string>
    <string name="detail_position">Position</string>
    <string name="detail_additionalNotes">Hinweise</string>

    <string name="debug_db_info">Datenbankstatus</string>
    <string name="debug_db_info_item">Einträge Tabelle Item</string>
    <string name="debug_db_info_tray">Einträge Tabelle Tray</string>

    <string name="data_url">Datenbank URL</string>
    <string name="data_progress">Fortschritt</string>
    <string name="data_dbinfo">Datenbankinformationen</string>
    <string name="data_db_settings">Datenbankeinstellungen</string>
    <string name="data_itemcount">Datenbankeinträge Items</string>
    <string name="data_traycount">Datenbankeinträge Trays</string>
    <string name="data_imagecount">Datenbankeinträge Bilder</string>
    <string name="data_version">Datenbankversion</string>
    <string name="data_version_net">Globale Datenbankversion</string>
    <string name="data_no_db">Noch keine lokale Datenbank vorhanden!</string>
    <string name="data_no_net_db">Konnte Serverversion nicht abrufen!</string>
    <string name="data_url_error">Die Server-URL ist wahrscheinlich fehlerhaft!</string>
    <string name="daten_button_text_get_group">Daten abrufen</string>
    <string name="data_groups">Verfügbare Gruppen</string>
    <string name="data_first_time_url">Gib hier die Server-URL ein!</string>

    <string name="about_text">Dieses Projekt ist Open Source!\nDu findest das Repository unter\n<a href="https://github.com/firesoft-de/Digitale-Taschenkarte-Fahrzeugbeladung">https://github.com/firesoft-de/Digitale-Taschenkarte-Fahrzeugbeladung</a></string>

    <string name="settings_colors">Anzeige</string>
    <string name="settings_color_position_mark">Farbe der\nPositionsmarkierung</string>
    <string name="settings_color_position_text">Farbe des\nPositionstextes</string>
    <string name="settings_network">Netzwerk</string>
    <string name="settings_network_check_enabled">Der Server wird täglich auf Datenbankupdates überprüft.</string>
    <string name="settings_network_check_disabled">Der Server wird nicht automatisch auf Datenbankupdates überprüft.</string>
    <string name="settings_color_error">Es wird ein HEX-Color Code benötigt!</string>
    <string name="settings_color_explain">Die Farben werden als hexadezimaler RGB-Farbwert nach dem Muster #RRGGBB gespeichert.</string>
    <string name="detail_count">Anzahl</string>

</resources>
