<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    app:showAsAction="always">

    <item android:id="@+id/search"
        android:title="@string/search_title"
        app:showAsAction="collapseActionView|ifRoom"
        android:icon="@drawable/ic_search_black_24dp"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/ActionSorting"
        android:title="@string/action_sort"
        app:showAsAction="collapseActionView|ifRoom"
        android:icon="@drawable/ic_sort_24dp">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/SortXY"
                    android:title="Voreinstellung"
                    app:showAsAction="never"
                    android:checked="true"/>

                <item
                    android:id="@+id/SortAZ"
                    android:title="A-Z"
                    app:showAsAction="never"/>

                <item
                    android:id="@+id/SortZA"
                    android:title="Z-A"
                    app:showAsAction="never"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/OptionMenuItemData"
        android:title="@string/option_menu_data"
        app:showAsAction="never"/>

    <item
        android:id="@+id/OptionMenuDebug"
        android:title="@string/option_menu_debug"
        app:showAsAction="never"/>

    <item
        android:id="@+id/OptionMenuSettings"
        android:title="@string/option_menu_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/OptionMenuLicense"
        android:title="@string/option_menu_license"
        app:showAsAction="never"/>

    <item
        android:id="@+id/OptionMenuAbout"
        android:title="@string/option_menu_about"
        app:showAsAction="never"/>

</menu>

