<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dresden.de.digitaleTaschenkarteBeladung.fragments.SettingsFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/settings_button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Einstellungen zurücksetzen"
            tools:layout_editor_absoluteY="40dp"
            card_view:layout_constraintTop_toBottomOf="@id/settings_card_network"
            android:gravity="center"
            android:layout_marginTop="@dimen/text_size_normal"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"/>

        <android.support.v7.widget.CardView
            android:id="@+id/settings_card_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0">

            <android.support.v7.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                card_view:columnCount="3"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/margin_supersmall"
                android:paddingBottom="@dimen/margin_supersmall"
                >

                <TextView
                    android:id="@+id/settingsTV1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_big"
                    android:background="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:text="@string/settings_colors"
                    android:paddingStart="@dimen/margin_small"
                    android:paddingEnd="0dp"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/text_size_normal"
                    card_view:layout_column="0"
                    card_view:layout_row="0"
                    card_view:layout_columnSpan="3"
                    android:layout_marginBottom="@dimen/margin_small"/>

                <TextView
                    style="@style/TextTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_color_position_mark"
                    android:paddingStart="@dimen/margin_small"
                    android:paddingEnd="0dp"
                    android:lines="2"
                    card_view:layout_column="0"
                    card_view:layout_row="1"
                    card_view:layout_gravity="fill_vertical|center_vertical"
                    app:layout_columnWeight="2"
                    />

                <EditText
                    android:id="@+id/et_colorPositionMark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    app:layout_column="1"
                    app:layout_row="1"
                    app:layout_columnWeight="6"
                    />

                <View
                    android:id="@+id/vw_colorPositionMark"
                    android:layout_width="@dimen/margin_small"
                    android:layout_height="20dp"
                    card_view:layout_column="2"
                    card_view:layout_row="1"
                    android:layout_margin="2dp"
                    card_view:layout_gravity="fill"
                    app:layout_columnWeight="1"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:paddingEnd="0dp"
                    android:paddingStart="@dimen/margin_small"
                    android:text="@string/settings_color_position_text"
                    app:layout_columnWeight="2"
                    card_view:layout_column="0"
                    style="@style/TextTheme"
                    card_view:layout_gravity="fill_vertical|center_vertical"
                    card_view:layout_row="2" />

                <EditText
                    android:id="@+id/et_colorPositionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    app:layout_column="1"
                    app:layout_row="2"
                    app:layout_columnWeight="6"
                    />

                <View
                    android:id="@+id/vw_colorPositionText"
                    android:layout_width="@dimen/margin_small"
                    android:layout_height="20dp"
                    card_view:layout_column="2"
                    card_view:layout_row="2"
                    android:layout_margin="2dp"
                    card_view:layout_gravity="fill"
                    app:layout_columnWeight="1"
                    />

                <TextView
                    android:id="@+id/settings_color_error"
                    style="@style/ErrorTextTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:lines="2"
                    android:paddingEnd="0dp"
                    android:paddingStart="4dp"
                    app:layout_columnWeight="2"
                    android:text="@string/settings_color_error"
                    card_view:layout_column="1"
                    card_view:layout_columnSpan="2"
                    card_view:layout_row="3" />

            </android.support.v7.widget.GridLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/settings_card_network"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            card_view:layout_constraintTop_toBottomOf="@id/settings_card_display">

            <android.support.v7.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                card_view:columnCount="3"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/margin_supersmall"
                android:paddingBottom="@dimen/margin_supersmall"
                >

                <TextView
                    android:id="@+id/settingsTV2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_big"
                    android:background="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:text="@string/settings_network"
                    android:paddingStart="@dimen/margin_small"
                    android:paddingEnd="0dp"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/text_size_normal"
                    card_view:layout_column="0"
                    card_view:layout_row="0"
                    card_view:layout_columnSpan="3"
                    android:layout_marginBottom="@dimen/margin_small"/>

                <CheckBox
                    android:id="@+id/settings_cb_network_autocheck"
                    style="@style/TextTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:paddingEnd="0dp"
                    android:paddingStart="@dimen/margin_small"
                    android:text="@string/settings_network_check_disabled"
                    app:layout_columnWeight="2"
                    card_view:layout_column="0"
                    card_view:layout_gravity="fill_vertical|center_vertical"
                    card_view:layout_row="1" />

            </android.support.v7.widget.GridLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
